2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-22  Andreas Kupries  <andreask@activestate.com>

	* ncgi.man: Tweaked the formatting of the newly committed example
	  a bit.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Rewritten to use new features for handling the
	  environment.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Fixed ncgi dependencies in the scripts executed by
	  sub-shells.

2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Added 'exit' to the scripts executed in sub-shells,
	  to make them usable with 'wish'-type shells as well. Fixed
	  8.4ism in testsuite of 8.2+ package.

2006-07-02  Michael Schlenker <mic42@users.sourceforge.net>

	* ncgi.tcl: Applied patch from [SF Tcllib Bug 532774] to
	  speed up parsing of large values using string functions
	  instead of regexp.
	  
2006-07-02  Michael Schlenker <mic42@users.sourceforge.net>
        
	* ncgi.tcl: Fixed [SF Tcllib Bug 547274]. We could further
	  enhance the value parsing in case a parameter is specified.

2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Fixed use and cleanup of temp. files. Also fixed
	  warning about changes to the env array.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Hooked into the new common test support code.
