@@ -1,3 +1,8 @@
+2008-04-23  Andreas Kupries  <andreask@activestate.com>
+
+	* ncgi.tcl (::ncgi::exists): Fixed documentation in code
+	* ncgi.man: and outside, the result was specified wrongly.
+
 2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
